[gd_scene load_steps=5 format=3 uid="uid://dywox2fty4051"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_6oood"]
[ext_resource type="Texture2D" uid="uid://b4lo84rouvt01" path="res://assets/textures/ui/ScoreBox.png" id="1_epnaj"]
[ext_resource type="Texture2D" uid="uid://dgmsh6khvv1rs" path="res://assets/textures/ui/PauseBtn.png" id="2_earuc"]

[sub_resource type="LabelSettings" id="LabelSettings_1rtrq"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oood")

[node name="TopBarBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.45098)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="ScoreBox" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 293.0
offset_bottom = 83.0
texture = ExtResource("1_epnaj")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 12.0
offset_top = 24.0
offset_right = 268.0
offset_bottom = 74.0
label_settings = SubResource("LabelSettings_1rtrq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_bottom = 90.0
grow_horizontal = 0
texture_normal = ExtResource("2_earuc")
stretch_mode = 3

[connection signal="pressed" from="TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
